[package]
name = "ldfm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
dirs = "6.0.0"
git2 = "0.20.2"
serde = { version = "1.0.219", features = ["derive"] }
simple-expand-tilde = "0.5.1"
toml = "0.8.23"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
