[package]
name = "ldfm"
description = "Linux Dotfiles Manager - a tool for managing dotfiles in Linux"
version = "0.0.1"
edition = "2021"
publish = true
license-file = "LICENSE"
authors = ["Pavel Kirilin <s3riussan@gmailcom>"]
readme = "README.md"
repository = "https://github.com/s3rius/ldfm"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive", "env"] }
dirs = "6.0.0"
fs_extra = "1.3.0"
git2 = "0.20.2"
pathdiff = "0.2.3"
serde = { version = "1.0.219", features = ["derive"] }
simple-expand-tilde = "0.5.1"
toml = "0.8.23"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
strip = true
panic = "unwind"
